# prediction-market-arbitrage

./: .env.example  .gitignore  contracts.json  guide.md  main.py  pyproject.toml
common/: async_poly_client.py  custom_poly_client.py
scripts/: discover_cs2.py  discover_markets.py  discover_nba.py  report.py
src/: __init__.py  bot.py  config.py  mappings.py  models.py
src/clients/: __init__.py  kalshi_client.py  polymarket_client.py
src/modules/: __init__.py  arbitrage_finder.py  data_collector.py  position_manager.py  results_recorder.py  trade_executor.py
